fix(console): link <form> to reactive form to avoid native html behaviour on it

--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/api-portal-plan-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/api-portal-plan-edit.component.html
@@ -17,7 +17,7 @@
 -->
 
 <h1>Plan</h1>
-<form autocomplete="off" gioFormFocusInvalid>
+<form *ngIf="planForm" autocomplete="off" gioFormFocusInvalid [formGroup]="planForm">
   <mat-card>
     <mat-stepper>
       <mat-step state="general" [stepControl]="planForm.get('general')">
