--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
@@ -20,7 +20,7 @@
   Endpoint
 </h1>
 
-<form gioFormFocusInvalid>
+<form *ngIf="endpointForm" gioFormFocusInvalid autocomplete="off" [formGroup]="endpointForm">
   <mat-tab-group animationDuration="0ms">
     <mat-tab label="General">
       <!-- General tab content -->
