--- a/gravitee-apim-console-webui/src/components/gio-notification-menu/gio-notification-menu.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-notification-menu/gio-notification-menu.component.html
@@ -33,15 +33,15 @@
   (overlayOutsideClick)="onOutsideClick()"
 >
   <mat-card class="gio-notification-menu mat-elevation-z4">
-    <div class="gio-notification-menu__header">
+    <div class="gio-notification-menu__header" [class.empty]="!userNotifications.length">
       <div *ngIf="userNotifications.length < 2">{{ userNotifications.length }} notification</div>
       <div *ngIf="userNotifications.length > 1">{{ userNotifications.length }} notifications</div>
-      <button mat-button (click)="deleteAll()">
+      <button mat-button (click)="deleteAll()" *ngIf="userNotifications.length > 0">
         <span>Delete all</span>
       </button>
     </div>
-    <mat-divider></mat-divider>
-    <mat-list class="gio-notification-menu__list">
+    <mat-divider *ngIf="userNotifications.length > 0"></mat-divider>
+    <mat-list class="gio-notification-menu__list" *ngIf="userNotifications.length > 0">
       <mat-list-item *ngFor="let userNotification of userNotifications" class="gio-notification-menu__list-item">
         <button mat-icon-button (click)="delete(userNotification)" type="button" aria-label="Delete notification">
           <mat-icon svgIcon="gio:trash"></mat-icon>
