fix(console): fix ToC scrollingContainer

--- a/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.html
+++ b/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.html
@@ -157,6 +157,6 @@
   <gio-table-of-contents
     class="gio-instance-details-environment__toc"
     [sectionNames]="{ '': 'Environment' }"
-    scrollingContainer="md-content"
+    scrollingContainer=".gio-main-page__content"
   ></gio-table-of-contents>
 </div>
