--- a/gravitee-apim-console-webui/src/organization/configuration/roles/org-settings-roles.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/roles/org-settings-roles.component.html
@@ -75,6 +75,6 @@
   <gio-table-of-contents
     class="org-settings-roles__toc"
     [sectionNames]="{ '': 'Roles' }"
-    scrollingContainer="md-content"
+    scrollingContainer=".gio-main-page__content"
   ></gio-table-of-contents>
 </div>
