--- a/gravitee-apim-console-webui/src/organization/configuration/identity-provider/org-settings-identity-provider.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/identity-provider/org-settings-identity-provider.component.html
@@ -251,5 +251,5 @@
     </gio-save-bar>
   </form>
 
-  <gio-table-of-contents [sectionNames]="{ '': 'Identity provider' }" scrollingContainer="md-content"></gio-table-of-contents>
+  <gio-table-of-contents [sectionNames]="{ '': 'Identity provider' }" scrollingContainer=".gio-main-page__content"></gio-table-of-contents>
 </div>
