--- a/gravitee-apim-console-webui/src/shared/components/gio-form-card-group/gio-form-card.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-form-card-group/gio-form-card.component.scss
@@ -13,11 +13,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 @use 'sass:map';
 @use 'node_modules/@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
+$foreground: map.get(gio.$mat-theme, foreground);
 $accent: map.get(gio.$mat-theme, accent);
 
 :host {
@@ -43,6 +43,11 @@ $accent: map.get(gio.$mat-theme, accent);
     border-radius: 100%;
     height: 24px;
     width: 24px;
+
+    &__disabled {
+      color: mat.get-color-from-palette($foreground, disabled);
+      cursor: auto;
+    }
   }
 
   &.selected {
@@ -54,7 +59,13 @@ $accent: map.get(gio.$mat-theme, accent);
     }
   }
 
-  &:hover {
+  &.disabled {
+    color: mat.get-color-from-palette($foreground, disabled);
+    border: 1px solid mat.get-color-from-palette($foreground, disabled);
+    cursor: auto;
+  }
+
+  &:hover:not(.disabled) {
     @include mat.elevation-transition();
     @include mat.elevation(3);
 
