fix: format `createdAt` field of the notification
https://gravitee.atlassian.net/browse/APIM-404

--- a/gravitee-apim-console-webui/src/components/gio-notification-menu/gio-notification-menu.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-notification-menu/gio-notification-menu.component.html
@@ -50,7 +50,7 @@
           <strong>{{ userNotification.title }}</strong>
         </div>
         <div mat-line>{{ userNotification.message }}</div>
-        <div mat-line>{{ userNotification.created_at }}</div>
+        <div mat-line>{{ userNotification.created_at | date: 'medium' }}</div>
       </mat-list-item>
     </mat-list>
   </mat-card>
