fix(console): open documentation link to new tab

--- a/gravitee-apim-console-webui/src/management/api/portal/details/api-portal-details.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/details/api-portal-details.component.html
@@ -32,7 +32,7 @@
   </button>
   <div gioBannerBody>
     <div>We no longer support path-based APIs. To continue using all features, you will need to update your API.</div>
-    <a href="https://www.gravitee.io/blog/gravitee-api-definitions">Learn more</a>
+    <a href="https://www.gravitee.io/blog/gravitee-api-definitions" target="_blank">Learn more</a>
   </div>
 </gio-banner-warning>
 
