--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -55,17 +55,41 @@
     <ng-container matColumnDef="states">
       <th mat-header-cell *matHeaderCellDef id="states"></th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon *ngIf="element.state === 'STARTED'" matTooltip="Started" class="states__api-started" size="20">play_circle</mat-icon>
-        <mat-icon *ngIf="element.state !== 'STARTED'" matTooltip="Stopped" class="states__api-not-started" size="20">stop_circle</mat-icon>
-        <mat-icon *ngIf="element.isNotSynced$ | async" matTooltip="API out of sync" class="states__api-is-not-synced" size="20"
-          >sync_problem</mat-icon
-        >
-        <mat-icon *ngIf="element.lifecycleState === 'PUBLISHED'" matTooltip="Published" class="states__api-published" size="20"
-          >cloud_done</mat-icon
-        >
-        <mat-icon *ngIf="element.lifecycleState !== 'PUBLISHED'" matTooltip="Unpublished" class="states__api-not-published" size="20"
-          >cloud_off</mat-icon
-        >
+        <mat-icon
+          *ngIf="element.state === 'STARTED'"
+          matTooltip="Started"
+          class="states__api-started"
+          size="20"
+          svgIcon="gio:play-circle"
+        ></mat-icon>
+        <mat-icon
+          *ngIf="element.state !== 'STARTED'"
+          matTooltip="Stopped"
+          class="states__api-not-started"
+          size="20"
+          svgIcon="gio:stop-circle"
+        ></mat-icon>
+        <mat-icon
+          *ngIf="element.isNotSynced$ | async"
+          matTooltip="API out of sync"
+          class="states__api-is-not-synced"
+          size="20"
+          svgIcon="gio:refresh-cw"
+        ></mat-icon>
+        <mat-icon
+          *ngIf="element.lifecycleState === 'PUBLISHED'"
+          matTooltip="Published"
+          class="states__api-published"
+          size="20"
+          svgIcon="gio:cloud-published"
+        ></mat-icon>
+        <mat-icon
+          *ngIf="element.lifecycleState !== 'PUBLISHED'"
+          matTooltip="Unpublished"
+          class="states__api-not-published"
+          size="20"
+          svgIcon="gio:cloud-unpublished"
+        ></mat-icon>
         <mat-icon
           *ngIf="element.origin === 'kubernetes'"
           matTooltip="Kubernetes Origin"
