feat(console): improve design of export dialog

--- a/gravitee-apim-console-webui/src/management/api/portal/details/api-portal-details-export-dialog/api-portal-details-export-dialog.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/details/api-portal-details-export-dialog/api-portal-details-export-dialog.component.html
@@ -50,12 +50,14 @@
         CRD API Definition
       </ng-template>
 
-      <gio-banner-info
-        >Export your API Definition to a CRD format (Custom Resource Definition from Kubernetes) and start using our beta GKO to manage your
-        API declaratively.
-        <a href="https://docs.gravitee.io/apim/3.x/apim_kubernetes_operator_overview.html" target="_blank" rel="noopener noreferrer">
-          Link to documentation <mat-icon class="content__crd__link__icon" svgIcon="gio:external-link"></mat-icon>
-        </a>
+      <gio-banner-info>
+        <div>
+          Export your API Definition to a CRD format (Custom Resource Definition from Kubernetes) and start using our beta GKO to manage
+          your API declaratively.
+          <a href="https://docs.gravitee.io/apim/3.x/apim_kubernetes_operator_overview.html" target="_blank" rel="noopener noreferrer">
+            Link to documentation <mat-icon class="content__crd__link__icon" svgIcon="gio:external-link"></mat-icon>
+          </a>
+        </div>
       </gio-banner-info>
     </mat-tab>
   </mat-tab-group>
