feat(console): improve design of api proxy health-check

--- a/gravitee-apim-console-webui/src/management/api/proxy/health-check/api-proxy-health-check.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/health-check/api-proxy-health-check.component.scss
@@ -11,6 +11,13 @@ $typography: map.get(gio.$mat-theme, typography);
   @include gio-layout.gio-responsive-margin-container;
 }
 
-.go-to-dashboard {
-  float: right;
+.api-proxy-health-check {
+  &__banner-info,
+  &__description {
+    margin: 0 0 12px;
+  }
+
+  &__go-to-dashboard {
+    float: right;
+  }
 }
