--- a/gravitee-apim-console-webui/src/management/api/proxy/health-check/api-proxy-health-check.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/health-check/api-proxy-health-check.component.html
@@ -17,17 +17,17 @@
 -->
 <h1>
   Health-check
-  <button class="go-to-dashboard" mat-raised-button type="button" (click)="gotToHealthCheckDashboard()">
+  <button class="api-proxy-health-check__go-to-dashboard" mat-raised-button type="button" (click)="gotToHealthCheckDashboard()">
     Go to Health-check dashboard
   </button>
 </h1>
 
-<p>
+<p class="api-proxy-health-check__description">
   Health check configuration let you enable or disable health check service, set a frequency rate, choose an health relative path and
   provide some assertions to control endpoint API's health.
 </p>
 
-<gio-banner-info>
+<gio-banner-info class="api-proxy-health-check__banner-info">
   <span> By enabling health-check, all non-backup endpoints will be checked except if health-check is disabled at endpoint level. </span>
 </gio-banner-info>
 
