--- a/gravitee-apim-console-webui/src/management/api/analytics/pathMappings/api-path-mappings.component.html
+++ b/gravitee-apim-console-webui/src/management/api/analytics/pathMappings/api-path-mappings.component.html
@@ -32,7 +32,13 @@
       <th mat-header-cell *matHeaderCellDef id="actions"></th>
       <td mat-cell *matCellDef="let element">
         <div class="path-mappings__table__actions">
-          <button mat-icon-button aria-label="Button to edit a path mapping" matTooltip="Edit path mapping">
+          <button
+            mat-icon-button
+            aria-label="Button to edit a path mapping"
+            matTooltip="Edit path mapping"
+            *gioPermission="{ anyOf: ['api-definition-u'] }"
+            (click)="editPathMapping(element.path)"
+          >
             <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
           </button>
           <button
