fix: add cursor pointer to api in application subscriptions
see https://gravitee.atlassian.net/browse/APIM-397

--- a/gravitee-apim-console-webui/src/management/application/details/subscriptions/application-subscriptions-list.component.html
+++ b/gravitee-apim-console-webui/src/management/application/details/subscriptions/application-subscriptions-list.component.html
@@ -34,7 +34,7 @@
         <tbody md-body>
           <tr md-row ng-repeat="subscription in $ctrl.subscriptions.data track by subscription.id">
             <td md-cell>
-              <a ng-click="$ctrl.navigateToSubscription(subscription.id)">
+              <a ng-click="$ctrl.navigateToSubscription(subscription.id)" style="cursor: pointer">
                 {{ $ctrl.subscriptions.metadata[subscription.api].name }}
               </a>
             </td>
