fix: add cursor pointer to api in application subscriptions
see https://gravitee.atlassian.net/browse/APIM-397

--- a/gravitee-apim-console-webui/src/index.scss
+++ b/gravitee-apim-console-webui/src/index.scss
@@ -85,6 +85,10 @@ body {
   @include material-layout-compatibility();
 
   @import './scss/gio-global-style';
+
+  a {
+    cursor: pointer;
+  }
 }
 
 :where(.bootstrap) {
