--- a/gravitee-apim-console-webui/src/management/_stepper.scss
+++ b/gravitee-apim-console-webui/src/management/_stepper.scss
@@ -138,7 +138,7 @@ md-radio-button.import-file-from-url {
 .gv-creation-timeline .timeline:before {
   position: absolute;
   width: 1px;
-  left: 2%;
+  left: 15px;
 }
 
 .gv-creation-timeline ul.timeline li timeline-panel {
@@ -175,11 +175,10 @@ md-radio-button.import-file-from-url {
 
 .gv-creation-timeline .timeline li timeline-badge {
   box-shadow: none;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
+  height: 25px;
+  line-height: 25px;
   font-size: 1.8em;
-  left: 4%;
+  left: 14px;
   top: 10px;
   background-color: #fff !important;
   z-index: 0;
