fix(console): properly display user avatar in top bar user menu

--- a/gravitee-apim-console-webui/src/components/gio-user-menu/gio-user-menu.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-user-menu/gio-user-menu.component.html
@@ -16,12 +16,18 @@
 
 -->
 <button mat-icon-button [matMenuTriggerFor]="menu" class="gio-user-menu__button-avatar">
-  <gio-avatar [roundedBorder]="true" [src]="currentUser.picture" [name]="currentUser.displayName" size="36"></gio-avatar>
+  <gio-avatar [roundedBorder]="true" [src]="userPicture" [name]="currentUser.displayName" size="36"></gio-avatar>
 </button>
 <span *ngIf="hasAlert" class="gio-user-menu__alert-badge gio-badge-accent"></span>
 <mat-menu #menu="matMenu" class="gio-user-menu">
   <div mat-menu-item class="gio-user-menu__header">
-    <gio-avatar [roundedBorder]="true" [src]="currentUser.picture" [name]="currentUser.displayName" size="36" class="mat-icon"></gio-avatar>
+    <gio-avatar
+      [roundedBorder]="true"
+      [src]="userPicture"
+      [name]="currentUser.displayName"
+      size="36"
+      class="mat-icon gio-user-menu__header__user-avatar"
+    ></gio-avatar>
     <span class="gio-user-menu__header__user-info">
       <h5>{{ userShortName }}</h5>
       <small>{{ currentUser.email }}</small>
