--- a/gravitee-apim-console-webui/src/components/gio-user-menu/gio-user-menu.component.scss
+++ b/gravitee-apim-console-webui/src/components/gio-user-menu/gio-user-menu.component.scss
@@ -33,14 +33,21 @@
 
   &__header {
     display: flex;
+    align-items: center;
+    line-height: 0;
     cursor: auto;
+    min-width: 220px;
 
     &:hover {
       background-color: transparent;
     }
 
+    &__user-avatar {
+      flex: 0 0 auto;
+    }
+
     &__user-info {
-      line-height: 0;
+      height: 48px;
     }
   }
 
