--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
@@ -16,7 +16,7 @@
 
 -->
 
-<form *ngIf="virtualHostsFormArray" [formGroup]="virtualHostsFormArray" autocomplete="off" gioFormFocusInvalid>
+<form *ngIf="virtualHostsForm" [formGroup]="virtualHostsForm" autocomplete="off" gioFormFocusInvalid>
   <mat-card>
     <div class="virtual-host__header">
       <span>Use virtual-host to define on which entrypoint your API can be reached depending on host. </span>
@@ -39,7 +39,7 @@
         <td mat-cell *matCellDef="let element">
           <mat-form-field appearance="fill" class="virtual-host__table__host-field">
             <mat-label>Listening host</mat-label>
-            <input #hostInput matInput [formControl]="element.controls.host" [matAutocomplete]="hostAuto" required />
+            <input #hostInput matInput [formControl]="element.controls.host" [matAutocomplete]="hostAuto" />
 
             <!-- Config Autocomplete to only select domain with input value -->
             <mat-autocomplete #hostAuto="matAutocomplete">
@@ -48,7 +48,7 @@
                 [value]="hostInput.value"
                 (click)="element.controls.hostDomain.setValue(domain)"
               >
-                {{ hostInput.value + '.' + domain }}
+                {{ hostInput.value ? hostInput.value + '.' + domain : domain }}
               </mat-option>
             </mat-autocomplete>
 
@@ -98,7 +98,13 @@
       <ng-container matColumnDef="remove">
         <th mat-header-cell *matHeaderCellDef id="remove" width="1%"></th>
         <td mat-cell *matCellDef="let element; let i = index">
-          <button *ngIf="!readOnly" (click)="onDeleteVirtualHostClicked(i)" mat-icon-button aria-label="Button to delete a virtual host">
+          <button
+            type="button"
+            *ngIf="!readOnly"
+            (click)="onDeleteVirtualHostClicked(i)"
+            mat-icon-button
+            aria-label="Button to delete a virtual host"
+          >
             <mat-icon svgIcon="gio:trash"></mat-icon>
           </button>
         </td>
@@ -114,5 +120,5 @@
     </table>
   </mat-card>
 
-  <gio-save-bar [form]="virtualHostsFormArray" (submitted)="onSubmit()" (resetClicked)="onResetClicked()"></gio-save-bar>
+  <gio-save-bar [form]="virtualHostsForm" (submitted)="onSubmit()" (resetClicked)="onResetClicked()"></gio-save-bar>
 </form>
