feat(console): redirect to plan liste after create or edit plan

--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.html
@@ -31,7 +31,7 @@
 
   <mat-form-field class="characteristics-field" appearance="fill">
     <mat-label>Characteristics</mat-label>
-    <gio-form-tags-input formControlName="characteristics" [addOnBlur]="false"></gio-form-tags-input>
+    <gio-form-tags-input formControlName="characteristics" [addOnBlur]="true"></gio-form-tags-input>
   </mat-form-field>
 
   <h2>Conditions</h2>
