--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.html
@@ -31,13 +31,7 @@
     <mat-tab label="Configuration">
       <!-- Configuration tab content -->
       <div class="tab-body-wrapper">
-        <api-proxy-group-configuration
-          *ngIf="schemaForm"
-          [schemaForm]="schemaForm"
-          [group]="group"
-          [isReadOnly]="isReadOnly"
-          (onConfigurationChange)="onConfigurationChange($event)"
-        ></api-proxy-group-configuration>
+        <api-proxy-group-configuration [groupConfigurationControl]="groupForm.get('groupConfiguration')"></api-proxy-group-configuration>
       </div>
     </mat-tab>
     <mat-tab label="Service discovery">
