feat(console): finish migration for plan list, create and edit page

--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/api-portal-plan-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/api-portal-plan-edit.component.html
@@ -17,7 +17,7 @@
 -->
 
 <h1>
-  <gio-go-back-button [ajsGo]="{ to: 'management.apis.detail.portal.ng-plans' }"></gio-go-back-button>
+  <gio-go-back-button [ajsGo]="{ to: 'management.apis.detail.portal.plans' }"></gio-go-back-button>
   Plan
 </h1>
 <form *ngIf="planForm" autocomplete="off" gioFormFocusInvalid [formGroup]="planForm">
